--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "command-line-publish",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Convert `command-line-usage` JSON or JavaScript ESM into HTML or SVG files",
   "main": "index.js",
   "bin": {
@@ -45,10 +45,9 @@
   "dependencies": {
     "ansi-to-html": "git+https://github.com/brettz9/ansi-to-html.git#css-publish",
     "ansi-to-svg": "^1.4.3",
-    "command-line-args": "^5.1.1",
+    "command-line-basics": "^0.4.0",
     "command-line-usage": "^6.0.2",
-    "node-alias": "^1.0.4",
-    "update-notifier": "^3.0.1"
+    "node-alias": "^1.0.4"
   },
   "devDependencies": {
     "@mysticatea/eslint-plugin": "^12.0.0",
