--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "command-line-publish",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "description": "Convert `command-line-usage` JSON or JavaScript ESM into HTML or SVG files",
   "main": "index.js",
   "bin": {
@@ -45,28 +45,29 @@
   "dependencies": {
     "ansi-to-html": "git+https://github.com/brettz9/ansi-to-html.git#css-publish",
     "ansi-to-svg": "^1.4.3",
-    "command-line-basics": "^0.6.0",
-    "command-line-usage": "^6.0.2",
+    "command-line-basics": "^0.6.2",
+    "command-line-usage": "^6.1.0",
     "node-alias": "^1.0.4"
   },
   "devDependencies": {
-    "@mysticatea/eslint-plugin": "^12.0.0",
-    "eslint": "^6.5.1",
-    "eslint-config-ash-nazg": "^11.0.1",
+    "@mysticatea/eslint-plugin": "^13.0.0",
+    "eslint": "^6.7.2",
+    "eslint-config-ash-nazg": "^14.0.3",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-array-func": "^3.1.3",
     "eslint-plugin-compat": "^3.3.0",
     "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsdoc": "^15.9.10",
-    "eslint-plugin-markdown": "^1.0.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jsdoc": "^18.4.3",
+    "eslint-plugin-markdown": "^1.0.1",
+    "eslint-plugin-no-unsanitized": "^3.0.2",
     "eslint-plugin-no-use-extend-native": "^0.4.1",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-sonarjs": "^0.4.0",
+    "eslint-plugin-sonarjs": "^0.5.0",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^12.0.2",
-    "typescript": "^3.6.3"
+    "eslint-plugin-unicorn": "^14.0.1",
+    "typescript": "^3.7.3"
   }
 }
