--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "command-line-publish",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Convert `command-line-usage` JSON or JavaScript ESM into HTML or SVG files",
   "type": "module",
   "main": "index.js",
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "prepublishOnly": "pnpm i",
-    "eslint": "eslint --ext js,md,html .",
+    "eslint": "eslint .",
     "lint": "npm run eslint",
     "help": "./bin/clp.js --help",
     "v": "./bin/clp.js --version",
@@ -41,40 +41,24 @@
   "bugs": "https://github.com/brettz9/command-line-publish/issues",
   "homepage": "https://github.com/brettz9/command-line-publish",
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/brettz9/command-line-publish"
   },
   "dependencies": {
-    "ansi-to-html": "git+https://github.com/brettz9/ansi-to-html.git#css-publish",
+    "ansi-to-html": "github:brettz9/ansi-to-html#css-publish",
     "ansi-to-svg": "^1.4.3",
-    "command-line-basics": "^1.0.1",
-    "command-line-usage": "^6.1.1",
+    "command-line-basics": "^2.0.1",
+    "command-line-usage": "^7.0.3",
     "node-alias": "^1.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/eslint-parser": "^7.14.5",
+    "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.25.1",
     "@babel/plugin-syntax-top-level-await": "^7.14.5",
-    "@brettz9/eslint-plugin": "^1.0.3",
-    "eslint": "^7.28.0",
-    "eslint-config-ash-nazg": "^29.17.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-array-func": "^3.1.7",
-    "eslint-plugin-compat": "^3.9.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-html": "^6.1.2",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsdoc": "^35.1.3",
-    "eslint-plugin-markdown": "^2.2.0",
-    "eslint-plugin-no-unsanitized": "^3.1.5",
-    "eslint-plugin-no-use-extend-native": "^0.5.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-radar": "^0.2.1",
-    "eslint-plugin-standard": "^4.1.0",
-    "eslint-plugin-unicorn": "^33.0.1"
+    "eslint": "^9.11.1",
+    "eslint-config-ash-nazg": "^36.17.1"
   }
 }
